# tree-sitter-ffenil

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  eslint.config.mts  example.ffnl  go.mod  grammar.js  justfile  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-ffenil.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ffenil/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFfenil/: ffenil.h
bindings/swift/TreeSitterFfenilTests/: TreeSitterFfenilTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
