[package]
name = "tree-sitter-ffenil"
description = "Ffenil grammar for tree-sitter"
version = "0.2.1"
authors = ["Autumn Baker <autumnbakerev@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ffenil"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "github.com:oughtum/tree-sitter-ffenil"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
